--- a/Spectere.SdlKit/Spectere.SdlKit.csproj
+++ b/Spectere.SdlKit/Spectere.SdlKit.csproj
@@ -19,7 +19,7 @@
       <Compile Update="Window.Video.cs">
         <DependentUpon>Window.cs</DependentUpon>
       </Compile>
-      <Compile Update="Image.Static.cs">
+      <Compile Update="Renderables\Image.Static.cs">
         <DependentUpon>Image.cs</DependentUpon>
       </Compile>
     </ItemGroup>
