Implemented the TileGrid renderable.

--- a/Spectere.SdlKit.Demo/Spectere.SdlKit.Demo.csproj
+++ b/Spectere.SdlKit.Demo/Spectere.SdlKit.Demo.csproj
@@ -19,6 +19,12 @@
       <None Update="Assets\SpectereFont-16x32.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Assets\TileGridDemo-16x16.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Assets\LICENSE.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
