--- a/Spectere.SdlKit/Spectere.SdlKit.csproj
+++ b/Spectere.SdlKit/Spectere.SdlKit.csproj
@@ -6,10 +6,17 @@
         <Nullable>enable</Nullable>
         <LangVersion>12</LangVersion>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <Authors>Spectere</Authors>
+        <PackageLicenseExpression>Zlib</PackageLicenseExpression>
+        <PackageReadmeFile>..\README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
       <Folder Include="Interop\Sdl\Support\Rect\" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <None Include="..\README.md" Pack="true" PackagePath=""/>
     </ItemGroup>
 
     <ItemGroup>
