Corrected the path to the package readme.

--- a/Spectere.SdlKit/Spectere.SdlKit.csproj
+++ b/Spectere.SdlKit/Spectere.SdlKit.csproj
@@ -8,7 +8,7 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <Authors>Spectere</Authors>
         <PackageLicenseExpression>Zlib</PackageLicenseExpression>
-        <PackageReadmeFile>..\README.md</PackageReadmeFile>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
